<resources>
    <string name="app_name">Android Assignment 1</string>
    <string name="hint_text"></string>
    <string name="content_description_media"></string>
    <string name="title"></string>
    <string name="secondary_text"></string>
    <string name="action_1"></string>
    <string name="action_2"></string>
    <string name="supporting_text"></string>
    <string-array name="countries_array">
        <item>England</item>
        <item>Ireland</item>
        <item>Scotland</item>
        <item>Wales</item>
    </string-array>
    <string-array name="area_codes">
        <item>+44</item>
        <item>+999</item>
        <item>+245</item>
        <item>+254</item>
    </string-array>
</resources>
